Make sure that the router links are not stretched to avoid accidental clicks

--- a/src/components/ActivityHeader.scss
+++ b/src/components/ActivityHeader.scss
@@ -7,7 +7,9 @@
                 "avatar date visibility details";
 
     .author, .date {
-        text-decoration: none;
+        a {
+            text-decoration: none;
+        }
     }
 
     .author {
